--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,61 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+@theme {
+  --color-primary-900: #050816;
+  --color-primary-700: #18276e;
+  --color-primary-600: #243ba6;
+  --color-primary-500: #304fdd;
+  --color-primary-475: #405ddf;
+  --color-neutral-700: #50565a;
+  --color-neutral-300: #d0d6da;
+  --color-neutral-100: #f6f7f8;
+  --color-error-500: #eb2929;
+  --color-error-400: #f05f5f;
+}
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  font-family: var(--font-fixel-text), sans-serif;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-fixel-display), sans-serif;
+}
+h1 {
+  @apply text-2xl md:text-4xl xl:text-[2.75rem] text-primary-700;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.chips {
+  @apply flex justify-center items-center gap-1 px-2.5 py-1.5 text-sm font-medium text-neutral-700 bg-white rounded-full border border-neutral-300;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.code-snippet {
+  font-family: var(--font-menlo), sans-serif;
+}
+
+.content-wrapper {
+  padding: clamp(32px, 2.5vw, 48px) clamp(20px, 3.333vw, 64px);
+  @apply mt-[-2rem] lg:mt-0 rounded-t-3xl lg:rounded-l-3xl lg:rounded-br-none relative z-10 bg-white;
+}
+
+.form-wrapper {
+  margin-top: clamp(32px, 2.5vw, 48px);
+  @apply max-w-[52rem];
+}
+
+label {
+  @apply block mb-3 text-sm font-medium text-primary-900;
+}
+
+.attributes-description {
+  margin-top: clamp(32px, 2.5vw, 48px);
+  padding-top: clamp(32px, 2.5vw, 48px);
+  @apply flex flex-col gap-4 max-w-[52rem] text-sm text-neutral-700 border-t border-neutral-300;
+}
+.attributes-description li {
+  @apply space-y-2.5;
 }
